@@ -1,5 +1,6 @@
 3.2.1 (unreleased)
 ------------------
+Issue-2010: Bika Listing Table: "Show More" button disappears
 Issue-2012: AR Template Analysis don't get applied if an Analysis Profile is selected
 Issue-2015: Copy AS functionality from the "bika_analysisservices" view raises an error
 Issue-1974: Clicking on the "Arrow Button" of an empty cell in the AR Add View causes a JS Error and endless Spinner
